--- a/back/public/animes.css
+++ b/back/public/animes.css
@@ -14,6 +14,7 @@
 
 .card{
     background-color: var(--color-purple);
+    display: grid;
 }
 
 .card_image-container img{
@@ -28,6 +29,8 @@
 .card_info{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    /* only with display grid */
+    align-items: center;
 }
 
 .card_price{
