--- a/back/views/index.njk
+++ b/back/views/index.njk
@@ -8,15 +8,15 @@
 
 <div id="container">
     <img src="../img/vegeta.jpg" alt="Vegeta DBZ">
-    <h1>Vegeta</h1>
-    <h2>Principe do planeta Vegeta</h2>
-    <p>Personagem que demonstra seu poder atravez de bastante treinamentos e esforcos</p>
+    <h1>{{index.name}}</h1>
+    <h2>{{index.role}}</h2>
+    <p>{{index.description}}</p>
 </div>
 
 <footer>
-    <a href="mailto:tmura@hotmail.com" target="_blank">Email</a>
-    <a href="tel:+5547992078767" target="_blank">Telefone</a>
-    <a href="https://discordapp.com/invite/gCRAFhc" target="_blank">Discord</a>
+    {% for link in index.link %}
+        <a href="{{link.url}}" target="_blank">{{link.name}}</a>
+    {% endfor %}
 </footer>
 
 {% endblock %}
