--- a/back/views/index.njk
+++ b/back/views/index.njk
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div id="container">
-    <img src="../img/vegeta.jpg" alt="Vegeta DBZ">
+    <img src="{{index.avatar_url}}" alt="Vegeta DBZ">
     <h1>{{index.name}}</h1>
     <h2>{{index.role}}</h2>
     <p>{{index.description}}</p>
