--- a/back/public/animes.css
+++ b/back/public/animes.css
@@ -15,6 +15,7 @@
 .card{
     background-color: var(--color-purple);
     display: grid;
+    cursor: pointer;
 }
 
 .card_image-container img{
@@ -78,4 +79,19 @@ iframe{
     height: 90%;
     position: absolute;
     top: 5%;
+}
+
+/* feature */
+.card_image-container{
+    position: relative;
+}
+
+.feature{
+    background: #f7d15f;
+    color: black;
+    padding: 2px 8px;
+    position: absolute;
+    right: 5px;
+    border-radius: 16px;
+    top: -2px;
 }
