--- a/back/views/anime.njk
+++ b/back/views/anime.njk
@@ -14,7 +14,7 @@
 
         {% for item in items %}
         <div class="card" id="{{item.id}}">
-            <div class="card_image-container">
+            <div class="card_image-container {{ 'feature-wrapper' if item.feature}}">
                 <img src="https://img.youtube.com/vi/{{item.id}}/hqdefault.jpg" alt="{{item.title}}">
                 {% if item.feature %}
                     <div class="feature">feature</div>
