--- a/back/public/animes.css
+++ b/back/public/animes.css
@@ -95,3 +95,21 @@ iframe{
     border-radius: 16px;
     top: -2px;
 }
+
+/* video */
+.video{
+    margin: 0 auto;
+    max-width: 800px;
+}
+
+.card_video-container{
+    position: relative;
+    padding-top: 50%;
+}
+
+.card_video-container iframe{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+}
