--- a/back/views/anime.njk
+++ b/back/views/anime.njk
@@ -32,17 +32,6 @@
  
     </section>
 
-    <div class="modal-overlay">
-        <div class="modal">
-            <a class="close-modal">
-                <span class="material-icons">close</span>
-            </a>
-            <div class="modal-content">
-                
-            </div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 
 {% endblock %}
